--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~16.2.0",
     "@angular/compiler-cli": "~16.2.0",
+    "@nativescript/android": "8.6.2",
+    "@nativescript/preview-cli": "1.0.5",
     "@nativescript/types": "~8.6.0",
-    "@nativescript/webpack": "~5.0.18",
+    "@nativescript/webpack": "^5.0.18",
     "@ngtools/webpack": "~16.2.0",
     "typescript": "~5.1.6"
   }
